# OpenHRT

./: .gitignore  Cargo.toml  justfile
assets/audio/: bounce.flac  place-your-bets-in.flac
data/: gold.toml  magenta.toml  olive.toml  peach.toml  purble.toml  race.toml
src/: audio.rs  data.rs  game.rs  horse.rs  main.rs  race.rs  utils.rs
src/race/: horse.rs  startup.rs  victory.rs
